--- a/CasaDoCodigo_v1/appsettings.json
+++ b/CasaDoCodigo_v1/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqliteConnectionString": "Data Source=./CasaDoCodigo.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
